--- a/includes/admin_daily.html
+++ b/includes/admin_daily.html
@@ -8,15 +8,15 @@
         	</svg>
       	  </a>
 	</td>
-	<td style="float:right;"><a ng-click="viewtable()" ng-disabled="readonly.lessons.length == 0" class="waves-effect waves-light btn right light-green">Table</a>
+	<td style="float:right;"><a ng-click="viewtable()" ng-disabled="cdata.readonly.lessons.length == 0" class="waves-effect waves-light btn right light-green">Table</a>
     </td>
     <td style="float:right;">
-        <a ng-click="adddaily()" ng-disabled="readonly.lessons.length == 0" class="waves-effect waves-light btn right blue">Add</a>
+        <a ng-click="adddaily()" ng-disabled="cdata.readonly.lessons.length == 0" class="waves-effect waves-light btn right blue">Add</a>
     </td>
 </tr>
 </table>
 
-<div ng-repeat="item in readonly.daily">
+<div ng-repeat="item in cdata.readonly.daily">
 	<ul class="collection with-header">
 		<li class="collection-item">
 				<div class="row">
@@ -24,7 +24,7 @@
                     
 					<!--<label for="name">Lesson number</label>-->
                      <input type="checkbox" id="{{item.id.id}}" ng-model="selIds[$index]"><label for="{{item.id.id}}">Lesson</label>
-					<select id="name" class="browser-default" ng-model="item.id" ng-options="lesson as lesson.name for lesson in readonly.lessons track by lesson.id"><option value="">Select</option></select>
+					<select id="name" class="browser-default" ng-model="item.id" ng-options="lesson as lesson.name for lesson in cdata.readonly.lessons track by lesson.id"><option value="">Select</option></select>
 
 				 </div>
 				 <div>
@@ -32,35 +32,38 @@
 				    	<a class="waves-effect waves-light btn pink" ng-click="removedaily($index)">Delete</a>
 				 </div>
 				 <div ng-show="$scope.showedit">
-					 
-					 
+					  
+                   <!--
 				   <div style="padding-top: 10px; padding-bottom: 10px;">
-				     <!--<select id="secnum" class="browser-default" ng-model="dummy" ng-options="user as user.section for user in users | unique: 'section'">
-				     <option value="">SECTION</option>
-				   </select>-->
 					<select class="browser-default" ng-model="dummy" ng-change="setDummy(dummy)">
         					<option ng-repeat="section in mysections" value="{{section}}" >{{section}}</option>
       					</select>
 					   
 					</div>
+                    -->
+                     
 				 	<table class="table">
 				 		<thead>
           					<tr>
               					<th>Username</th>
+                                <th>Section</th>
               					<th>Grade</th>
               					<th>Badge</th>
               					<th>Comment</th>
           					</tr>
         				</thead>
 
-        				<tbody ng-repeat="user in users" ng-show="user.section==dummy">
+                        
+        				<!--<tbody ng-repeat="user in cdata.users" ng-show="user.section==dummy">-->
+                        <tbody ng-repeat="user in cdata.users">
 				 			<tr>
 				 				<td>{{user.email}}</td>
+                                <td>{{user.section}}</td>
 				 				<td>
 				 					<input class="TextBox" type="number" validate="number" min=0 max=4 ng-model="user.daily[$parent.$index].grade" ng-change="emptyField(user,$parent.$index,$index)"/>
 				 				</td>
 				 				<td>
-				 					<select class="browser-default" ng-model="user.daily[$parent.$index].badge" ng-options="badge.id as badge.name for badge in readonly.badges"><option value="">Select</option></select>
+				 					<select class="browser-default" ng-model="user.daily[$parent.$index].badge" ng-options="badge.id as badge.name for badge in cdata.readonly.badges"><option value="">Select</option></select>
 				 				</td>
 				 				<td><input class="TextBox" type="text" validate="text" maxlength="140" ng-model="user.daily[$parent.$index].desc"/><td>
 				 			</tr>
