--- a/includes/admin_levels.html
+++ b/includes/admin_levels.html
@@ -15,7 +15,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in readonly.levels">
+<div ng-repeat="item in cdata.readonly.levels">
 	<ul class="collection with-header">
 		<li class="collection-item">
 			<form class="col s12">
@@ -55,4 +55,3 @@
 		</li>
 	</ul>
 </div>
-<br>
