switched Table to CSV

--- a/includes/admin_daily.html
+++ b/includes/admin_daily.html
@@ -8,7 +8,7 @@
         	</svg>
       	  </a>
 	</td>
-	<td style="float:right;"><a ng-click="viewtable()" ng-disabled="cdata.readonly.lessons.length == 0" class="waves-effect waves-light btn right light-green">Table</a>
+	<td style="float:right;"><a ng-click="viewtable()" ng-disabled="cdata.readonly.lessons.length == 0" class="waves-effect waves-light btn right light-green">CSV</a>
     </td>
     <td style="float:right;">
         <a ng-click="adddaily()" ng-disabled="cdata.readonly.lessons.length == 0" class="waves-effect waves-light btn right blue">Add</a>
