limit level name to 20 chars - for s.html

--- a/includes/admin_levels.html
+++ b/includes/admin_levels.html
@@ -21,7 +21,7 @@
 			<form class="col s12">
 				<div class="row">
 					<div class="input-field col s12">
-						<input id="name" type="text" ng-model="item.name">
+						<input id="name" type="text" ng-model="item.name" maxlength="20">
 				    	<label class='md-no-float' for="name">Name</label>
 					</div>
 
