--- a/includes/admin_daily.html
+++ b/includes/admin_daily.html
@@ -23,7 +23,7 @@
 
                     
 					<!--<label for="name">Lesson number</label>-->
-                     <input type="checkbox" id="{{item.id.id}}" ng-model="selIds[$index]"><label for="{{item.id.id}}">Lesson</label>
+                     <input type="checkbox" id="{{item.id.id}}" ng-model="selIds[$index]"><label for="{{item.id.id}}">Add lesson to CSV</label>
 					<select id="name" class="browser-default" ng-model="item.id" ng-options="lesson as lesson.name for lesson in cdata.readonly.lessons track by lesson.id"><option value="">Select</option></select>
 
 				 </div>
