added batch upload

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -15,7 +15,12 @@
       			</a>
 		</td>
 		<td class="right">
-            <a href="#!" id="sorter" ng-click="sortUser(listArray,'section')">Section</a> |
+            		<a href="#modalupall" id="upall" title="Upload data" data-height="50" class="modal-action modal-trigger btn blue white-text" style="vertical-align: bottom;">Upload</a>
+        	</td>
+	</tr>
+	<tr>
+		<td class="left">
+                        <a href="#!" id="sorter" ng-click="sortUser(listArray,'section')">Section</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'email')">Name</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'badgestotal')">Badges</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'quiztotal')">Quizzes</a> |
