--- a/includes/admin_quiz.html
+++ b/includes/admin_quiz.html
@@ -12,7 +12,7 @@
 </tr>
 </table>
 
-<div ng-repeat="item in cdata.readonly.quizzes">
+<div ng-repeat="item in cdata.readonly.quizzes" ng-init="showedit$index = false">
 	<ul class="collection with-header">
 		<li class="collection-item">
 				<div class="row">
@@ -20,10 +20,10 @@
 					<label for="name">Quiz name</label>
 				 </div>
 				 <div>
-				    	<a class="waves-effect waves-light btn light-green" ng-click="$scope.showedit = !$scope.showedit">Edit users</a>
+				    	<a class="waves-effect waves-light btn light-green" ng-click="showedit$index = !showedit$index">Edit users</a>
 				    	<a class="waves-effect waves-light btn pink" ng-click="removequiz($index)">Delete</a>
 				 </div>
-				 <div ng-show="$scope.showedit">
+				 <div ng-show="showedit$index">
 					
 					<table class="table">
 				 		<thead>
