--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -22,9 +22,11 @@
 					<input id="name" type="text" maxlength="30" ng-model="item.name">
 					<label class='md-no-float' for="name" data-error="wrong" data-success="right">Name (30 chars)</label>
 				</div>
+				<!-- RECENTS -->
 				<div class="input-field col s6">
-					<button class="btn-small btn-primary pull-right gray" ng-click="item.show=!item.show" ng-if="!item.show">Hide</button>
-					<button class="btn-small btn-danger pull-right gray" ng-click="item.show=!item.show" ng-if="item.show">Show</button>
+					<button class="btn-small btn-primary pull-right gray" ng-click="item.show=!item.show; adddate($index)" ng-if="!item.show">Hide</button>
+					<button class="btn-small btn-danger pull-right gray" ng-click="item.show=!item.show; remdate($index)" ng-if="item.show">Show</button>
+					 {{item.date}}
 					<a href="" ng-click="helpToast('Click button to toggle between showing full lesson or only title to users.',5000,'black')">
         				<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           					<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
