re-added added segimg

--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -103,6 +103,10 @@
 				    				<label class='md-no-float' for="name" data-error="wrong" data-success="right">Text (140 chars)</label>
 								</div>
 								<div class="input-field col s12">
+									<input id="segimg" type="text" ng-model="segment.segimg">
+							    	<label class='md-no-float' for="segimg">Image URL</label>
+								</div>
+								<div class="input-field col s12">
 									<input id="seglink" type="text" ng-model="segment.seglink">
 							    	<label class='md-no-float' for="seglink">Link URL</label>
                                 </div>
