changed keyword chip to blue

--- a/includes/lessons_one.html
+++ b/includes/lessons_one.html
@@ -21,7 +21,7 @@
         </div>
         <div class="card-action">
           <div ng-hide="lesson.keywords.length == 0 &&  lesson.expectations.length == 0">
-            <div title="keywords" class="chip pink white-text" ng-repeat="key in lesson.keywords">{{key}}</div>
+            <div title="keywords" class="chip blue white-text" ng-repeat="key in lesson.keywords">{{key}}</div>
             <div title="curriculum expectations" class="chip orange white-text" ng-repeat="expectation in lesson.expectations">{{expectation}}</div>
           </div>
         </div>
