--- a/includes/admin_lessons.html
+++ b/includes/admin_lessons.html
@@ -23,11 +23,14 @@
 					<label class='md-no-float' for="name" data-error="wrong" data-success="right">Name (30 chars)</label>
 				</div>
 				<!-- RECENTS -->
-				<div class="input-field col s6">
-					<button class="btn-small btn-primary pull-right gray" ng-click="item.show=!item.show; adddate($index)" ng-if="!item.show">Hide</button>
-					<button class="btn-small btn-danger pull-right gray" ng-click="item.show=!item.show; remdate($index)" ng-if="item.show">Show</button>
-					 {{item.date}}
-					<a href="" ng-click="helpToast('Click button to toggle between showing full lesson or only title to users.',5000,'black')">
+				<div class="col s6">
+                    
+				        <input type="checkbox" class="filled-in checkbox-pink" ng-checked="item.date" id="deleteme{{$index}}" ng-click="doDate($index)" />
+				        <label for="deleteme{{$index}}">
+					  <span>{{item.date}}</span>
+				        </label>
+                    				    
+					<a href="" ng-click="helpToast('Check on to show full lesson or off to show only title.',5000,'black')">
         				<svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
           					<ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
           					<text font-style="normal" transform="matrix(2.25929, 0, 0, 0.870395, -7.11379, -0.393831)" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="16" id="svg_2" y="20" x="6.5" stroke-width="0" stroke="#2196f3" fill="#2196f3">i</text>
