--- a/includes/admin_edit.html
+++ b/includes/admin_edit.html
@@ -24,10 +24,10 @@
             </div>
             <div>
                	<a class="waves-effect waves-light btn light-green" ng-click="navAdmin(item.name)">Edit</a>
-                <a class="waves-effect waves-light btn pink" ng-init="$scope.showedit = true" ng-disabled="$scope.showedit" ng-click="remcourseDB($index)">Remove</a>
+                <a class="waves-effect waves-light btn pink" ng-init="showedit$index = true" ng-disabled="showedit$index" ng-click="remcourseDB($index)">Remove</a>
                 <div style='float: right; vertical-align: bottom;'>
-                    <input type="checkbox" class="checkbox" id="removeme{{$index}}" ng-click="$scope.showedit = !$scope.showedit"/>
-				            <label for="removeme{{$index}}">Enable remove</label>
+                    <input type="checkbox" class="checkbox" id="removeme{{$index}}" ng-click="showedit$index = !showedit$index"/>
+		    <label for="removeme{{$index}}">Enable remove</label>
                     <a href="" ng-click="helpToast('Select to enable remove button.<br>Removing will de-register, not delete course.',5000,'black')">
                         <svg class="svg-class" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                           <ellipse ry="11" rx="11" cy="12" cx="12" stroke="#2196f3" fill="#fff"/>
