update UX for delete, confirm new user

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -51,7 +51,11 @@
          <a href="{{view}}" ng-click="navUser3($index)" target='_blank'>{{item.name}}</a> - ({{item.email}})<br>
          
          <p ng-show="item.confirmed==true"><b>Points: {{item.pointstotal}}</b> | Daily: {{item.dailytotal}} | Quizzes: {{item.quiztotal}} | Badges: {{item.badgestotal}} | Level: {{item.level.name}} | <a href="#!" id="sorter" ng-click="showedit$index = !showedit$index" ng-init="showedit$index = false">Edit</a></p>
-         <p ng-show="item.confirmed==false" class="red-text">Unconfirmed new user</p>
+         
+	 <p ng-show="item.confirmed==false" class="red-text">
+             Unconfirmed new user <span><a href="#" ng-click="confirmUser(item.uid,$index)">confirm</a></span> <span><a href="#" ng-click="removeuser(item.uid,$index)">delete</a></span>
+         </p>     
+	      
          <div class="secondary-content">
                 <p ng-show="item.section != undefined" class="chip blue white-text">{{item.section}}</p>
          </div>
