added unconfirmed to top menu

--- a/includes/admin_list.html
+++ b/includes/admin_list.html
@@ -24,7 +24,8 @@
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'email')">Name</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'badgestotal')">Badges</a> |
 			<a href="#!" id="sorter" ng-click="sortUser(listArray,'quiztotal')">Quizzes</a> |
-			<a href="#!" id="sorter" ng-click="sortUser(listArray,'pointstotal')">Points</a>
+			<a href="#!" id="sorter" ng-click="sortUser(listArray,'pointstotal')">Points</a>  |
+            		<a href="#!" id="sorter" ng-click="sortUser(listArray,'confirmed')">Unconfirmed</a>
 		</td>
 	</tr>
     <!--
