added level beside name

--- a/includes/dleaders.html
+++ b/includes/dleaders.html
@@ -3,7 +3,7 @@
         <li class="collection-item avatar" ng-repeat="cur_user in listArray">
                 <img ng-show="cur_user.photoUrl.indexOf('/mo/') <0" ng-src='{{cur_user.photoUrl}}' alt="{{cur_user.name}}" height='50px' class="circle" onerror="this.src='images/tyler-durden.jpg'">
                 <img ng-show="cur_user.photoUrl.indexOf('/mo/') >0" ng-src='images/tyler-durden.jpg' alt="{{cur_user.name}}" height='50px' class="circle" onerror="this.src='images/tyler-durden.jpg'">
-                <span class="title">{{cur_user.name}}</span><br>
+                <span class="title">{{cur_user.name}} - ( {{cur_user.level.name}} )</span><br>
                 <span class="title" style="color: #8bc34a;" ng-show="cur_user.pointstotal > user.avgpoints">{{cur_user.pointstotal}} XP (+ {{cur_user.pointstotal - user.avgpoints}})</span>
                 <span class="title" style="color: red;" ng-show="cur_user.pointstotal < user.avgpoints">{{user.pointstotal}} XP (- {{cur_user.avgpoints - cur_user.pointstotal}})</span><br>
 
