--- a/includes/dmain.html
+++ b/includes/dmain.html
@@ -12,8 +12,9 @@
               <div class="card-stacked">
                 <div class="card-content">
                   <h5>{{user.level.name}}</h5>
-                  <p style="color: #8bc34a;" ng-show="user.pointstotal > user.avgpoints">{{user.pointstotal}} XP (+ {{user.pointstotal - user.avgpoints}})</p>
-                  <p style="color: red;" ng-show="user.pointstotal < user.avgpoints">{{user.pointstotal}} XP (- {{user.avgpoints - user.pointstotal}})</p>
+                  <!-- <p style="color: #8bc34a;" ng-show="user.pointstotal > user.avgpoints">{{user.pointstotal}} XP (+ {{user.pointstotal - user.avgpoints}})</p>
+                  <p style="color: red;" ng-show="user.pointstotal < user.avgpoints">{{user.pointstotal}} XP (- {{user.avgpoints - user.pointstotal}})</p>-->
+                  <p>{{user.pointstotal}} XP</p>  
                 </div>
                 <div class="card-action">
                   <a href="#modallevels" class="modal-action modal-trigger">Levels</a>
